# trustinbox

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  turbo.json
.turbo/preferences/: tui.json
agent/: pyproject.toml
agent/src/: main.py  model.pkl  testing.ipynb  traning.ipynb
apps/api/: .env.example  drizzle.config.ts  package.json
apps/api/src/: index.ts
apps/extension/: manifest.json  package.json  tsconfig.json  tsconfig.scripts.json  vite.config.ts
apps/extension/.cache/: tsbuildinfo.json
apps/extension/src/: background.ts  content.ts  options.html  popup.html
apps/web/: components.json  env.config.ts  next.config.ts  package.json  tailwind.config.js  tsconfig.json
drizzle/: 0000_military_sister_grimm.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
extension/: package.json
extension/.github/agents/: ui-styling.agent.md
extension/dist_chrome/: manifest.json
extension/dist_chrome/.vite/: manifest.json
extension/dist_chrome/assets/: index.html-C8rygW41.js  index.prod.tsx-CHuKL3Ve.js
extension/src/: manifest.ts
extension/src/background/: index.ts
extension/src/content/: Content.tsx  index.dev.tsx  index.prod.tsx
extension/src/popup/: Popup.tsx
extension/src/sidePanel/: SidePanel.tsx  index.html  index.tsx
tooling/eslint/: package.json
tooling/eslint/src/: base.js
tooling/prettier/: package.json
tooling/typescript/: package.json
tooling/vitest/: package.json
turbo/generators/: config.ts
web/: components.json  drizzle.config.ts  local.db  package-lock.json  package.json
(+83 files in other folders)
